Fix some layout issues Images viewer hidden width in Firefox Service bar multiple layers added bug

--- a/app/css/imageViewer.css
+++ b/app/css/imageViewer.css
@@ -4,14 +4,13 @@
 	pointer-events: none;
 	margin-top: 15px;
 	height: 300px;
-	overflow: hidden;
 }
 
 #imageViewerContent
 {
 	pointer-events: auto;
 	position: absolute;
-	right: -254px;
+	right: -261px;
 	width: 275px;
 }
 
