--- a/app/css/layerManager.css
+++ b/app/css/layerManager.css
@@ -3,6 +3,7 @@
 #backgroundLayersSelect
 {
 	width: 150px;
+	height: 200px;
 }
 
 #backgroundLayers fieldset
